# minimatch

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.public  README-ALPACA-PLACEHOLDER.md  README-LIVE-PROVIDERS.md  README-MASSIVE-FLAT-FILES.md  README-PASTEL-SURFACES.md  README.md  VERSION  docker-compose.observability.yml
.github/workflows/: ci.yml
apps/: api.cpp  api.cpp.bak2  arena.cpp  backtest.cpp  binance_l2_client.cpp  client.cpp  coinbase_l2_client.cpp  drop_copy_ws.cpp  execution_backtest.cpp  execution_sim.cpp  fix_client.cpp  fix_server.cpp  kraken_l2_client.cpp  latency.cpp  live_market_data_ws.cpp  loadgen.cpp  market_data_ws.cpp  market_maker.cpp  market_record.cpp  market_replay.cpp  market_replay_ws.cpp  options_lab.cpp  queue_sim.cpp  replay.cpp  research_lab.cpp  server.cpp  snapshot.cpp  web.cpp
benchmark_results/: README.md  environment.txt  latency_2_runs.txt  latency_5_runs.txt  latency_default.txt  latency_help.txt  latency_scaling.txt  loadgen_2_runs.txt  loadgen_5_runs.txt  loadgen_default.txt  loadgen_symbol_scaling.txt  replay_help.txt
benchmark_results/e2e/: latest.txt  repeat.txt
benchmark_results/local/: arena.txt  arena_final.txt  latency.txt  latency_final.txt  loadgen.txt  loadgen_final.txt
benchmarks/: drop_copy_lookup_benchmark.cpp
build-ci/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_e3b0c44298.json  minimatch_api  minimatch_arena  minimatch_backtest  minimatch_binance_l2  minimatch_client  minimatch_coinbase_l2  minimatch_execution_backtest  minimatch_execution_sim  minimatch_fix_client  minimatch_fix_server  minimatch_kraken_l2  minimatch_latency  minimatch_live_market_ws  minimatch_loadgen  minimatch_market_data_ws  minimatch_market_maker  minimatch_market_record  minimatch_market_replay_ws  minimatch_market_time_replay  minimatch_options_lab  minimatch_queue_sim  minimatch_replay  minimatch_research_lab  minimatch_server  minimatch_snapshot  minimatch_tests  minimatch_tests_e3b0c442_discovery.cmake  minimatch_tests_e3b0c442_include.cmake  minimatch_tests_e3b0c442_tests.cmake  minimatch_web
data/historical/: market_history.db  massive_aapl.json
data/live/: binance_btcusd.json  binance_btcusdt.json  demo-binance-btcusd.jsonl  demo-binance-btcusdt.jsonl  market_events.db
data/recordings/: btcusd_live_20260719_212335.mmdata
data/replay/: sample_market.csv
docs/: DESIGN.md  DESIGN_SYSTEM.md  UI-GLASS-CARDS.md
frontend/: .env.example  app.js  dashboard-theme.css  index.html  package-lock.json  package.json  styles.css
frontend/live/: index.html
frontend/replay/: index.html
frontend/src/: App.tsx  index.css  main.tsx
include/minimatch/: algo_scheduler.hpp  algo_store.hpp  analytics.hpp  api_state.hpp  backtest_engine.hpp  binance_feed.hpp  binance_l2.hpp  coinbase_l2.hpp  drop_copy.hpp  event_log.hpp  exchange.hpp  execution.hpp  execution_algo.hpp  execution_analytics.hpp  execution_engine.hpp  execution_replay.hpp  execution_risk.hpp  execution_store.hpp  fix.hpp  fix_gateway.hpp  fix_session.hpp  fix_store.hpp  itch.hpp  kraken_feed.hpp  kraken_l2.hpp  latency.hpp  latency_stats.hpp  live_algo_executor.hpp  live_router_quotes.hpp  market_data.hpp  market_recorder.hpp  market_replay.hpp  midpoint_history.hpp  midpoint_store.hpp  oms.hpp  oms_store.hpp  order_book.hpp  (+16 more)
live_feed/: live_market.py  live_market.py.damaged
scripts/: auto_massive.sh  benchmark.sh  build.sh  check_benchmark_regressions.sh  check_massive.sh  dev.sh  dev_start.sh  dev_up.sh  download_massive_file.sh  export_benchmark_metrics.sh  generate_demo_live_db.py  generate_demo_massive.py  import_massive_minute_aggs.py  list_massive_files.sh  query_historical_db.py  query_live_db.py  run_benchmarks.sh  run_dashboard.sh  run_live_alpaca.sh  run_live_binance.sh  run_live_coinbase.sh  run_live_dashboard.sh  run_live_kraken.sh  run_massive_dashboard.sh  setup_live_feed.sh  setup_massive.sh  start_hosted.sh  start_web.sh  test_benchmark_regressions.sh  test_consolidated_market.sh  test_execution_metrics.sh  test_health.sh  test_live_providers.sh  test_reconciliation_api.sh  test_routed_execution.sh  test_router_preview.sh  verify_e2e.sh
sql/: execution_schema.sql
src/: algo_scheduler.cpp  algo_store.cpp  backtest_engine.cpp  binance_feed.cpp  binance_l2.cpp  coinbase_l2.cpp  drop_copy.cpp  event_log.cpp  exchange.cpp  execution.cpp  execution_algo.cpp  execution_analytics.cpp  execution_engine.cpp  execution_replay.cpp  execution_risk.cpp  execution_store.cpp  fix.cpp  fix_gateway.cpp  fix_session.cpp  fix_store.cpp  kraken_feed.cpp  kraken_l2.cpp  latency_stats.cpp  live_algo_executor.cpp  live_router_quotes.cpp  market_data.cpp  market_recorder.cpp  market_replay.cpp  midpoint_history.cpp  midpoint_store.cpp  oms.cpp  oms_store.cpp  order_book.cpp  pipeline.cpp  portfolio_risk.cpp  position_manager.cpp  protocol.cpp  quant.cpp  queue_model.cpp  reconciliation.cpp  (+7 more)
tests/: advanced_test.cpp  algo_recovery_test.cpp  backtest_engine_test.cpp  binance_l2_test.cpp  coinbase_l2_test.cpp  drop_copy_lookup_test.cpp  execution_algo_test.cpp  execution_analytics_test.cpp  execution_engine_test.cpp  execution_replay_test.cpp  execution_risk_test.cpp  execution_store_test.cpp  fix_gateway_test.cpp  fix_session_test.cpp  fix_store_test.cpp  fix_test.cpp  itch_test.cpp  kraken_l2_test.cpp  latency_stats_test.cpp  market_data_test.cpp  market_recorder_test.cpp  market_replay_test.cpp  oms_test.cpp  order_book_test.cpp  pipeline_test.cpp  quant_test.cpp  reconciliation_test.cpp  replay_control_test.cpp  router_market_data_test.cpp  router_test.cpp  stp_test.cpp  system_test.cpp  tca_test.cpp  venue_health_test.cpp
(+71 files in other folders)
